[gd_scene load_steps=7 format=3 uid="uid://76mxnx5v1b1o"]

[ext_resource type="Script" path="res://UI/settings_menu/settings_menu.gd" id="1_fa30v"]
[ext_resource type="FontFile" uid="uid://pn2b77ys0xk3" path="res://UI/Elements/UDDIGIKYOKASHON-B.TTC" id="2_slhpp"]
[ext_resource type="Texture2D" uid="uid://d3s4rmkp4f6s0" path="res://UI/Elements/HUD_Element_-_Button_Plain.png" id="3_rsaca"]
[ext_resource type="Texture2D" uid="uid://b1sofi46ngrh8" path="res://UI/Elements/HUD_Element_-_Button_Click.png" id="4_ekim1"]
[ext_resource type="Texture2D" uid="uid://cjsbsmomjfib0" path="res://UI/Elements/HUD_Element_-_Button_Hover.png" id="5_ipk0k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmruq"]
bg_color = Color(0.154876, 0.154876, 0.154876, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fa30v")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(800, 500)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tmruq")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35
alignment = 1

[node name="SettingsLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_slhpp")
theme_override_font_sizes/font_size = 60
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainAudioLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_slhpp")
theme_override_font_sizes/font_size = 40
text = "Main Audio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainAudioSlider" type="HSlider" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="ControlsTopBox" type="CheckBox" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("2_slhpp")
theme_override_font_sizes/font_size = 40
text = " Invert HUD"
alignment = 1

[node name="CloseBtn" type="TextureButton" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
texture_normal = ExtResource("3_rsaca")
texture_pressed = ExtResource("4_ekim1")
texture_hover = ExtResource("5_ipk0k")
ignore_texture_size = true
stretch_mode = 0

[node name="BtnLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/CloseBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_slhpp")
theme_override_font_sizes/font_size = 50
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="drag_ended" from="CenterContainer/Panel/VBoxContainer/MainAudioSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="toggled" from="CenterContainer/Panel/VBoxContainer/ControlsTopBox" to="." method="_on_controls_top_box_toggled"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/CloseBtn" to="." method="_on_close_btn_pressed"]
